better queue management